Corrent text wrap styling bug for restaurant reviews

--- a/frontend/src/components/RestaurantShowPage/RestaurantShowPage.css
+++ b/frontend/src/components/RestaurantShowPage/RestaurantShowPage.css
@@ -367,6 +367,7 @@ height: auto;
 
 #reviewBody {
     display: block;
+    word-wrap: break-word;
     color: rgb(64, 64, 64);
     height: auto;
     line-height: 20px;
